crates/aven-check/tests/fixtures/check/invalid/named-family-implicit-branding.av
RankRow = {
  value: Int,
  <(other: RankRow): Bool => .value < other.value
}

row: RankRow = { value: 3 }
